ide/src/tests/ssa/snapshots/ide__tests__ssa__wat__local_tee.snap
---
source: ide/src/tests/ssa/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 {
BLOCK 0
%1 = 1
%2 = %1
%0 = %1
BLOCK 1
};

