ide/src/tests/ssa/snapshots/ide__tests__ssa__wat__test_br_if.snap
---
source: ide/src/tests/ssa/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 0) {
BLOCK 0
%0 = 1
IF %0 THEN GOTO 1
BLOCK 1
};

