ide/src/tests/ssa/snapshots/ide__tests__ssa__wat__test_empty_function.snap
---
source: ide/src/tests/ssa/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 1 {
BLOCK 1
GOTO 2
BLOCK 2

};

