ide/src/tests/ssa/snapshots/ide__tests__ssa__wat__test_if.snap
---
source: ide/src/tests/ssa/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 {
BLOCK 0
OP_I32_CONST

if %0 THEN GOTO 2
BLOCK 1
OP_NOP

GOTO 2
BLOCK 2
GOTO 3
BLOCK 3

};

