ide/src/tests/ssa/snapshots/ide__tests__ssa__wat__test_nested_block.snap
---
source: ide/src/tests/ssa/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 1) {
BLOCK 0
BLOCK 2
BLOCK 4
%0 = 1
GOTO 5 // BLOCK ended for 4
BLOCK 5 // THEN block for 4
GOTO 3 // BLOCK ended for 2
BLOCK 3 // THEN block for 2
BLOCK 1
};

